2004-11-08  Per Bothner  <per@bothner.com>

	* kawa/lang/SyntaxPattern.java (translate): Change MATCH_LENGTH
	encoding for non-pure lists.
	(match): Fix MATCH_LENGTH and MATCH_LREPEAT handling.
	* kawa/lang/SyntaxTemplate.java (BUILD_VECTOR): Since no repetition
	uses a var_no of 0, add one to var_no for a repeated variable.
	* kawa/lang/Translator.java (listLength): Minor optimization.

2004-11-06  Per Bothner  <per@bothner.com>

	* kawa/lang/Syntax.java (rewriteForm, scanForm): New methods.
	* kawa/lang/SyntaxForm.java (form, scope): Make fields public.
	(tr): Remove field.
	(make, toString, fromDatum, fromDatumIfNeeded, rewrite, rewriteBody,
	isIdentifier, freeIdentifierEquals): New methods.
	* kawa/lang/SyntaxPattern.java: New class extends Pattern. It encodes
	a pattern from syntax-case/syntax-rules in a "program".
	* kawa/lang/SyntaxTemplate.java: New class.
	* kawa/lang/SyntaxRule.java: Now a skeleton that inherits from
	SyntaxTemplate.
	* kawa/lang/SyntaxRules.java: Major re-write.
	* kawa/lang/PatternScope.java: New class.
	* kawa/lang/Makefile.am: Add new classes.

	* kawa/lang/PairPat.java (match): Remove no-lobger-useful SyntaxForm
	support.
	* kawa/lang/Quote.java (rewrite): Strip off SyntaxForm.
	* kawa/lang/Translator.java: Major rewrite to handle SyntaxForm.
	Some methods renamed.  Scan methods now use the new formStack,
	rather than a freshly-allocated Vector.  Some new helper routines.
	* kawa/lang/Macro.java: Don't keep track of captured identifiers
	individually, but instead use a single 'capturedScope'.
	(hygienic): New field to handline hygienic and non- differently.
	* kawa/lang/Eval.java (evalBody): Update for new scan protocol.
	* kawa/lang/AutoloadSyntax.java: Update to define scanForm.
	* kawa/lang/Lambda.java: Handle incoming SyntaxForms.

	* kawa/standard/require.java: Create a new ModuleExp for imported
	fields.  Set Macro's capturedScope to it, rather than each Declaration.